--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@300&display=swap');
 * {
   box-sizing: border-box;
   margin: 0px;
   padding: 0px;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Heebo', sans-serif,'Roboto', sans-serif;
 }
 
 
@@ -108,6 +110,7 @@ position:absolute;
 top:12rem;
 left: calc((100vw - 30rem)/2);
 display:flex;
+box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
 }
 .modal-text{
@@ -145,6 +148,7 @@ transform:scale(1.2);
   background: white;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .ticket div {
 }
